--- a/app/assets/stylesheets/employees.scss
+++ b/app/assets/stylesheets/employees.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Employees controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@mixin employees {
+    .employees {
+        list-style: none;
+        margin: 0;
+        li {
+            overflow: auto;
+            padding: 10px 0;
+            border-bottom: 1px solid $gray-lighter;
+        }
+    }
+}
+
+body.controller-employees {
+    @include general_styles;
+    @include employees;
+}
