--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
         <% if agent_signed_in? %>
-          <li><%= link_to "Employees", employees_index_path %></li>
+          <li><%= link_to "Employees", employees_path %></li>
           <% if admin_logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="admin-dropdown" data-toggle="dropdown">Admin <b class="caret"></b></a>
