--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Employees#index</h1>
-<p>Find me in app/views/employees/index.html.erb</p>
+<% provide(:title, 'Employees') %>
+<h1>Employees</h1>
+
+<% if !@employees.nil? %>
+  <ul class="employees">
+    <% @employees.each do |employee| %>
+    <li>
+      <span class="col-xs-12">
+        <%= link_to employee['name'], employee_path(employee['id']) %>
+      </span>
+    </li>
+    <% end %>
+  </ul>
+<% end %>
