--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
     <%= csrf_meta_tags %>      
     <%= render 'layouts/shim' %>
   </head>
-  <body class="controller-<%= params[:controller] %>">
-    <%= render 'layouts/header' %>
+  <body class="controller-<%= params[:controller] %>" data-no-turbolink>
+    <%= render 'layouts/header' %>                      
     <div class="container">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
