--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -6,7 +6,7 @@
     <% @employees.each do |employee| %>
     <li>
       <span class="col-xs-12">
-        <%= link_to employee['name'], employee_path(employee['id']) %>
+        <%= link_to employee['name'], '#', { 'data-employee-id': employee['name'].gsub(/[^0-9A-Za-z]/, ''), class: 'employee' } %>
       </span>
     </li>
     <% end %>
