Add Show all link to reveal full schedule

--- a/app/assets/stylesheets/employees.scss
+++ b/app/assets/stylesheets/employees.scss
@@ -10,6 +10,9 @@
             padding: 10px 0;
             border-bottom: 1px solid $gray-lighter;
         }
+        .show-all {
+            color: green;
+        }
     }
 }
 
