--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -10,6 +10,11 @@
       </span>
     </li>
     <% end %>
+    <li>
+      <span class="col-xs-12">
+        <%= link_to 'Show all', '#', { 'data-employee-id': 'show-all', class: 'employee show-all' } %>
+      </span>
+    </li
   </ul>
 <% end %>
 <br />
