--- a/app/views/employees/submit.html.erb
+++ b/app/views/employees/submit.html.erb
@@ -1,4 +1,4 @@
 <h1>Submission</h1>
 
-<h2><%= @response['thank_you'] %></h2>
-<pre><%= JSON.pretty_generate(@response['submission']) %></pre>
+<h2 id='thank-you'><%= @response['thank_you'] %></h2>
+<pre id='submitted'><%= JSON.pretty_generate(@response['submission']) %></pre>
